--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,7 +44,16 @@ a {
     overflow: hidden;
 }
 /* ======header========= */
-.header {
+.fixed-header{
+    background: #E6F0FF;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+.hero-wrap {
+    display: flex;
+    flex-direction: column;
     position: relative;
     background: #E6F0FF;
     height: 100vh;
@@ -52,7 +61,7 @@ a {
 .navbar {
     display: flex;
     align-items:center;
-    padding-top: 38px;
+    padding: 12px 0;
 }
 .navbar ul {
     display: flex;
