--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,9 @@
 :root{
     --primary-key:#0F1B4C;
 }
+html, body{
+    scroll-behavior: smooth;
+}
 html{
     font-size: 62.5%;
 }
@@ -54,9 +57,10 @@ a {
 .hero-wrap {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     position: relative;
     background: #E6F0FF;
-    height: 100vh;
+    height: calc(100vh - 90px);
 }
 .navbar {
     display: flex;
@@ -89,14 +93,10 @@ a {
     font-size: 1.4rem;
     margin-right: 18px;
 }
-.hero{
-    margin-top: 130px;
-
-}
-.hero .info{
+.hero-wrap .info{
     width: 51%;
 }
-.hero .sub-title{
+.hero-wrap .sub-title{
     margin-bottom: 8px;
     color: #687690;
     font-size: 1.8rem;
@@ -105,7 +105,7 @@ a {
     letter-spacing: 0.01em;
 
 }
-.hero .title{
+.hero-wrap .title{
     margin-bottom: 30px;
     color: #000336;
     font-size: 6.4rem;
@@ -114,7 +114,7 @@ a {
 
 
 }
-.hero .desc{
+.hero-wrap .desc{
     
     color: #5A6473;
     font-size: 18px;
