--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -263,7 +263,8 @@ a {
 
 .featured .list{
     margin-top: 70px;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
 }
 .featured .item{
